Update from user dashboard