@@ -7,7 +7,6 @@ import com.example.lms.repository.BookRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class BookServiceImpl implements BookService {
@@ -30,29 +29,33 @@ public class BookServiceImpl implements BookService {
         r.setPublish_year(b.getPublish_year());
         r.setEdition(b.getEdition());
         r.setAuthor(b.getAuthor());
-        r.setDescription(b.getDescription()); // ✅ NEW
+        r.setDescription(b.getDescription()); 
         return r;
     }
 
     @Override
-    public List<BookResponse> getAll(String isbn, String title, String author) {
+    public List<BookResponse> getBooks(Integer id, String isbn, String title,
+                                       String author, String category, boolean isAdmin) {
+        if (id != null && !isAdmin) {
+            throw new RuntimeException("Only admin can filter by id");
+        }
 
         List<Book> books;
-
-        if (isbn != null)
-            books = repo.findByIsbnContainingIgnoreCase(isbn);
-        else if (title != null)
-            books = repo.findByTitleContainingIgnoreCase(title);
-        else if (author != null)
-            books = repo.findByAuthorContainingIgnoreCase(author);
-        else
+        if (category != null) {
+            books = repo.findByCategoryName(category);
+        } else {
             books = repo.findAll();
+        }
 
-        return books.stream().map(this::toResponse).collect(Collectors.toList());
+        return books.stream()
+                .filter(b -> id == null || b.getBook_id().equals(id))
+                .filter(b -> isbn == null || b.getIsbn().toLowerCase().contains(isbn.toLowerCase()))
+                .filter(b -> title == null || b.getTitle().toLowerCase().contains(title.toLowerCase()))
+                .filter(b -> author == null || b.getAuthor().toLowerCase().contains(author.toLowerCase()))
+                .map(this::toResponse)
+                .toList();
     }
 
-    
-    
     @Override
     public BookResponse create(BookRequest req) {
 
@@ -64,7 +67,7 @@ public class BookServiceImpl implements BookService {
         b.setEdition(req.getEdition());
         b.setAuthor(req.getAuthor());
 
-        // ✅ NEW: fetch description from API
+        
         String desc = bookInfoService.fetchDescriptionByIsbn(req.getIsbn());
         b.setDescription(desc);
 
@@ -90,9 +93,4 @@ public class BookServiceImpl implements BookService {
     public void delete(Integer id) {
         repo.deleteById(id);
     }
-    @Override
-    public List<Book> getBooksByCategory(Integer categoryId) {
-        return repo.findByCategoryId(categoryId);
-    }
-    
 }
